--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -16,8 +16,8 @@
 
   &__time {
     // position: relative;
-    font-size: 12px;
-    opacity: 0.7;
+    font-size: 14px;
+    // opacity: 0.7;
     top: -12px;
     margin-right: 4px;
   }
