--- a/src/common.scss
+++ b/src/common.scss
@@ -1,11 +1,26 @@
 .button {
-  height: 40px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  outline: none;
+  box-shadow: 0px 10px 14px -7px #276873;
+  background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+  background-color: #599bb3;
+  border-radius: 10px;
+  border: 1px solid #29668f;
+  display: inline-block;
   cursor: pointer;
+  color: #ffffff;
+  font-family: Verdana;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: bold;
+  padding: 10px 32px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #3d768a;
+}
+.button:hover {
+  background: linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+  background-color: #408c99;
+}
+.button:active {
+  position: relative;
+  top: 1px;
 }
 
 .icon-button {
