--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -1,73 +1,105 @@
 .calendar {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 60px);
+
+  &__header {
     display: flex;
-    flex-direction: column;
-    height: calc(100vh - 60px);
+    height: 100px;
+    padding-left: 48px;
+  }
 
-    &__header {
-        display: flex;
-        height: 100px;
-        padding-left: 48px;
-    }
+  &__body {
+    display: flex;
+    overflow: auto;
+  }
 
-    &__body {
-        display: flex;
-        overflow: auto;
-    }
+  &__week-container {
+    display: flex;
+    width: 100%;
+    height: fit-content;
+  }
 
-    &__week-container {
-        display: flex;
-        width: 100%;
-        height: fit-content;
-    }
+  &__time-scale {
+    height: 100%;
+    width: 48px;
+  }
 
-    &__time-scale {
-        height: 100%;
-        width: 48px;
-    }
+  &__week {
+    display: flex;
+    flex: 1;
+  }
 
-    &__week {
-        display: flex;
-        flex: 1;
-    }
+  &__day {
+    position: relative;
+    flex: 1;
+    border-left: 1px solid #eee;
+  }
 
-    &__day {
-        position: relative;
-        flex: 1;
-        border-left: 1px solid #eee;
-    }
+  &__time-slot {
+    height: 59px;
+    position: relative;
+    border-bottom: 1px solid #eee;
+  }
 
-    &__time-slot {
-        height: 59px;
-        position: relative;
-        border-bottom: 1px solid #eee;
-    }
-
-    &__day-label {
-        flex: 1;
-    }
+  &__day-label {
+    flex: 1;
+  }
 }
 
 .day-label {
-    height: 100%;
+  height: 100%;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+  &__day-name {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
+    font-size: 1em;
+    text-transform: uppercase;
+    font-weight: 700;
     opacity: 0.6;
 
-    &__day-name {
-        font-size: 14px;
-        text-transform: uppercase;
+    &-today {
+      color: #000000;
+      text-shadow: 0px 2px 2px #6eaac0;
+      opacity: 0.9;
     }
+  }
 
-    &__day-number {
-        font-size: 22px;
+  &__day-number {
+    font-size: 2em;
+    margin: 20px 0 0 0;
+    text-shadow: 0px 2px 2px #6eaac0;
+    opacity: 0.6;
+
+    &-today {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 10px 0 -10px 0;
+      box-shadow: 0px 10px 14px -7px #276873;
+      background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+      background-color: #599bb3;
+      border-radius: 10px;
+      border: 1px solid #082538;
+      color: #ffffff;
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      text-shadow: 0px 1px 0px #3d768a;
+      opacity: 0.9;
     }
+  }
 }
 
 .red-line {
-    position: absolute;
-    width: 100%;
-    border-top: 2px solid red;
-    z-index: 5;
+  position: absolute;
+  width: 100%;
+  border-top: 2px solid red;
+  z-index: 5;
 }
