--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -26,5 +26,9 @@
 
   &__displayed-month {
     margin-left: 10px;
+    font-size: 1.5em;
+    font-weight: 700;
+    text-shadow: 0px 2px 2px #6eaac0;
+    opacity: 0.6;
   }
 }
