--- a/src/components/event/event.scss
+++ b/src/components/event/event.scss
@@ -1,23 +1,35 @@
 .event {
   position: absolute;
-  width: 80%;
-  background-color: cornflowerblue;
+  width: 90%;
   z-index: 1;
-  border-radius: 8px;
   padding: 8px;
   color: #fff;
+  text-shadow: 0px 2px 2px #0b1316;
+  box-shadow: 0px 10px 14px -7px #276873;
+  background: linear-gradient(to bottom, #73a3b4 5%, #4b8a96 100%);
+  background-color: #599bb3;
+  border-radius: 10px;
+  border: 1px solid #29668f;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  opacity: 0.6;
 
   &__title {
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    margin-bottom: 8px;
+    margin-bottom: 2px;
+    font-size: 1em;
+    color: rgb(192, 226, 240);
+    font-weight: 600;
+    text-shadow: 0px 2px 2px #0b1316;
+    opacity: 1;
   }
 
   &:hover {
-    font-weight: bold;
-    background-color: red;
+    opacity: 1;
   }
 }
 
