--- a/src/common.scss
+++ b/src/common.scss
@@ -30,19 +30,19 @@
   background: transparent;
 }
 
-.modal {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+// .modal {
+//   position: fixed;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
 
-  &__content {
-    background: #fff;
-    padding: 16px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-  }
-}
+//   &__content {
+//     background: #fff;
+//     padding: 16px;
+//     border: 1px solid #ccc;
+//     border-radius: 8px;
+//   }
+// }
 
 .overlay {
   position: fixed;
