--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -5,10 +5,19 @@
   align-items: center;
 
   &__content {
-    background: #fff;
+    background: #599bb3;
     padding: 16px;
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 10px;
+    color: #fff;
+    text-shadow: 0px 2px 2px #0b1316;
+    box-shadow: 0px 10px 14px -7px #276873;
+    background: linear-gradient(to bottom, #80b1c4 15%, #4b8a96 100%);
+    border-radius: 10px;
+    border: 1px solid #29668f;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
   }
 }
 
@@ -44,18 +53,28 @@
   flex-direction: column;
 
   &__field {
+    font-size: 1em;
     margin: 8px;
-    border: none;
+    padding: 5px;
+    border: 1px solid #29668f;
+    border-radius: 8px;
   }
 
   &__submit-btn {
     margin: 8px;
+    font-size: 18px;
+    font-weight: 600;
     margin-left: auto;
-    border: none;
     color: #fff;
-    background-color: cornflowerblue;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 8px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    text-shadow: 0px 2px 2px #0b1316;
+    box-shadow: 0px 10px 14px -7px #276873;
+    background: linear-gradient(to bottom, #73a3b4 5%, #4b8a96 100%);
+    border-radius: 10px;
+    border: 1px solid #29668f;
+
+    cursor: pointer;
   }
 }
