--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -18,6 +18,11 @@
     margin-left: 32px;
     padding: 0 16px;
   }
+  &__list-btn {
+    margin-left: 150px;
+    padding: 0 16px;
+    opacity: 0.5;
+  }
 
   &__nav-icon {
     font-size: 18px;
