--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -18,13 +18,11 @@
     display: flex;
     width: 100%;
     height: fit-content;
-    margin-top: 30px;
   }
 
   &__time-scale {
     height: 100%;
     width: 48px;
-    margin-top: -10px;
   }
 
   &__week {
@@ -39,13 +37,39 @@
   }
 
   &__time-slot {
-    height: 60px;
+    height: 59px;
     position: relative;
     border-bottom: 1px solid #eee;
   }
 
   &__day-label {
     flex: 1;
+  }
+
+  &__offset {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 12px;
+    opacity: 0.7;
+    margin: 25px 0 0 0;
+
+    &-line {
+      width: 100%;
+      border: 0;
+      height: 1px;
+      background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.75),
+        rgba(0, 0, 0, 0)
+      );
+    }
+
+    &-text {
+      width: 50px;
+    }
   }
 }
 
@@ -79,7 +103,7 @@
     text-shadow: 0px 2px 2px #6eaac0;
     opacity: 0.6;
 
-    &-today {
+    &-current {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -100,8 +124,11 @@
 }
 
 .red-line {
+  display: flex;
+  height: 2px;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   width: 100%;
-  border-top: 2px solid red;
   z-index: 5;
 }
