--- a/src/components/event/event.scss
+++ b/src/components/event/event.scss
@@ -1,6 +1,6 @@
 .event {
   position: absolute;
-  width: 90%;
+  width: 100%;
   z-index: 1;
   padding: 8px;
   color: #fff;
@@ -27,13 +27,49 @@
     text-shadow: 0px 2px 2px #0b1316;
     opacity: 1;
   }
+  &__description {
+    display: flex;
+    width: 100%;
+    margin-top: 100px;
 
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 0px #0b1316;
+    opacity: 1;
+  }
   &:hover {
     opacity: 1;
   }
 }
 
 .delete-event-btn {
+  display: flex;
+  position: relative;
+  left: 90%;
+  top: -55px;
+  z-index: 6;
   cursor: pointer;
   border: none;
+  border-radius: 10px;
+  width: 15%;
+  height: 20px;
+  background-color: #ffffff;
+  opacity: 0.8;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+  &:hover {
+    background-color: rgb(165, 88, 88);
+    opacity: 1;
+  }
+
+  &__text {
+    color: #000000;
+    font-weight: bold;
+    margin: auto;
+
+    :hover > & {
+      color: #ffffff;
+      opacity: 1;
+    }
+  }
 }
