--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -10,15 +10,15 @@
 }
 
 .time-slot {
-  height: 60px;
+  height: 59px;
   width: 48px;
   text-align: right;
+  display: flex;
+  justify-content: space-around;
 
   &__time {
-    // position: relative;
-    font-size: 14px;
-    // opacity: 0.7;
-    top: -12px;
-    margin-right: 4px;
+    position: relative;
+    font-size: 12px;
+    opacity: 0.7;
   }
 }
