--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -61,9 +61,9 @@
       height: 1px;
       background-image: linear-gradient(
         to right,
+        rgba(0, 0, 0, 0.8),
         rgba(0, 0, 0, 0),
-        rgba(0, 0, 0, 0.75),
-        rgba(0, 0, 0, 0)
+        rgba(0, 0, 0, 0.8)
       );
     }
 
@@ -131,4 +131,5 @@
   position: absolute;
   width: 100%;
   z-index: 5;
+  background: red;
 }
