--- a/src/components/event/event.scss
+++ b/src/components/event/event.scss
@@ -43,22 +43,23 @@
 
 .delete-event-btn {
   display: flex;
-  position: relative;
+  position: absolute;
+
   left: 90%;
-  top: -55px;
+  top: 0px;
   z-index: 6;
   cursor: pointer;
   border: none;
-  border-radius: 10px;
-  width: 15%;
-  height: 20px;
+  border-radius: 25px;
+  width: 25px;
+  height: 25px;
   background-color: #ffffff;
   opacity: 0.8;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
   &:hover {
-    background-color: rgb(165, 88, 88);
+    background-color: rgb(255, 169, 169);
     opacity: 1;
   }
 
@@ -66,9 +67,8 @@
     color: #000000;
     font-weight: bold;
     margin: auto;
-
     :hover > & {
-      color: #ffffff;
+      color: #ff0d0d;
       opacity: 1;
     }
   }
