--- a/src/components/timeSlotModal/timeSlotModal.scss
+++ b/src/components/timeSlotModal/timeSlotModal.scss
@@ -21,7 +21,12 @@
 }
 
 .tsoverlay {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #cccccc45;
   z-index: 10;
 }
 
